[gd_scene load_steps=3 format=3 uid="uid://bxu4aslw4g3jw"]

[ext_resource type="Script" path="res://gui/main_menu.gd" id="1_d34jh"]
[ext_resource type="PackedScene" uid="uid://bln0sjssdaxub" path="res://gui/options_menu.tscn" id="2_d31nd"]

[node name="Main_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d34jh")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Start_Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="Options_Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="Quit_Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit
"

[node name="Options_Menu" parent="." instance=ExtResource("2_d31nd")]
layout_mode = 1

[node name="Demo_End" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 462.0
offset_top = 284.0
offset_right = 4192.0
offset_bottom = 830.0
scale = Vector2(0.1, 0.1)
theme_override_font_sizes/font_size = 400
text = "Thanks For Playing!
"

[node name="Demo_Timer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="pressed" from="VBoxContainer/Start_Button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Options_Button" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit_Button" to="." method="_on_quit_button_pressed"]
